--- a/tuwen.html
+++ b/tuwen.html
@@ -28,36 +28,6 @@
     </div>
     <div class="content">
       <div class="con">
-
-        <div class="article">
-          <p>
-            许多朋友期盼已久的两部大片终于来啦，
-            一部是《碟中谍5》，被誉为“目前系列最佳作”，
-            一部是《小黄人大眼萌》，卖萌“何止丧心病狂”。
-            现在就来看看本周即将上映的影片吧：
-          </p>
-        </div>
-
-        <div class="card">
-          <a href="vdetail.html">
-            <img src="./images/card.jpg"/>
-            <span class="cMsg">
-              <i class="cName">终结者：创世纪</i>
-              <i class="cIns">克里斯托费.麦克利 / 阿诺.施瓦辛格 / 犯罪 / 2015.08.27</i>
-              <i class="arrow"></i>
-            </span>
-          </a>
-        </div>
-
-        <div class="article">
-          <p>
-            许多朋友期盼已久的两部大片终于来啦，
-            一部是《碟中谍5》，被誉为“目前系列最佳作”，
-            一部是《小黄人大眼萌》，卖萌“何止丧心病狂”。
-            现在就来看看本周即将上映的影片吧：
-          </p>
-        </div>
-
         <div class="img">
           <img src="./images/img.jpg"/>
         </div>
@@ -69,13 +39,18 @@
             现在就来看看本周即将上映的影片吧：
           </p>
         </div>
-
+      </div>
+      <div class="con">
         <div class="img">
           <img src="./images/img.jpg"/>
         </div>
-
-        <div class="card">
-          <img src="./images/card.jpg"/>
+        <div class="article">
+          <p>
+            许多朋友期盼已久的两部大片终于来啦，
+            一部是《碟中谍5》，被誉为“目前系列最佳作”，
+            一部是《小黄人大眼萌》，卖萌“何止丧心病狂”。
+            现在就来看看本周即将上映的影片吧：
+          </p>
         </div>
       </div>
     </div>
@@ -85,17 +60,6 @@
         <i class="support"></i>
         <i class="num">33</i>
       </div>
-      <input type="hidden" class="sShare_logo" value="/uploads/active/20151109/17/3d7e3c8a3829b3b651f70fffe6ecfea1.png">
-      <input type="hidden" class="sShare_title" value="标题">
-      <input type="hidden" class="sShare_summary" value="描述">
-      <input type="hidden" class="sShare_link" value="链接">
-    </div>
-    <div class="goBack">
-      <div class="line"></div>
-      <a href="index.html" class="back">
-        <span>发现更多精彩</span>
-        <i></i>
-      </a>
     </div>
     <div class="shade">
       <img src="./images/direction.png" />
@@ -105,5 +69,4 @@
   <script src="./js/wx.js"></script>
   <script src="./js/wxbridge.js"></script>
   <script src="./js/c.js"></script>
-  <script src="./js/CW.js"></script>
 </html>
