--- a/card/index.html
+++ b/card/index.html
@@ -40,8 +40,9 @@
         </div>
         <div class="msg">
           <span class="title">恶棍天使</span>
-          <span class="favor"><i class="icon"></i>  83%喜欢</span>
-          <span class="actor">邓超/孙俪/喜剧</span>
+          <!-- <span class="favor"><i class="icon"></i>  83%喜欢</span> -->
+          <span class="actor">邓超/孙俪/邓超/孙俪</span>
+          <span class="actor">喜剧</span>
           <span class="date">2015.12.12上映</span>
 
           <span class="detail">
