--- a/explor/explor.html
+++ b/explor/explor.html
@@ -28,7 +28,7 @@
             <span>
               <img src="./images/index/item2.png"/>
             </span>
-            <span class="msg">衍生品商城</span>
+            <span class="msg">周边商城</span>
           </div>
           <div class="item item3">
             <span>
@@ -57,8 +57,6 @@
   <script src="./js/zepto.min.js"></script>
   <script src="./js/swiper.min.js"></script>
   <script src="./js/iscroll.js"></script>
-
-
   <script>
     var myScroll;
     function loaded () {
