--- a/explore/explore.html
+++ b/explore/explore.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="csrf-token">
-    <title>首页</title>
+    <title>发现</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/swiper.min.css">
+    <link rel="stylesheet" href="http://wx.wepiao.com/css/style.css?v=20151028">
   </head>
   <body>
     <div id="fxCon" class="fxCon">
@@ -53,6 +54,21 @@
       </div>
 
     </div>
+    <footer class="fixed-ft">
+        <ul class="nav-sub">
+            <li><a class="nav-index" href="http://wx.wepiao.com/"><span class="ico-movie"><i></i></span>购票</a>
+            </li>
+            <li><a class="nav-cinema" href="http://wx.wepiao.com/cinema_list.html"><span class="ico-cinema"><i></i></span>影院</a>
+            </li>
+            <li class="m-hide"><a href="http://wechat.show.wepiao.com/category/typeId=0" class="nav-category"><span class="ico-category"><i></i></span>分类</a></li>
+            <li class="current" id="explor"><a href="http://wx.wepiao.com/explore/explore.html"><span class="ico-explor"><i>
+            </i></span>发现</a><span class="pointer-small m-hide"></span>
+            </li>
+
+            <li><a class="nav-my" href="http://wx.wepiao.com/movie_oz_my.html"><span class="ico-my"><i></i></span>我的</a>
+            </li>
+        </ul>
+    </footer>
   </body>
   <script src="./js/zepto.min.js"></script>
   <script src="./js/swiper.min.js"></script>
