--- a/w_copper/index.html
+++ b/w_copper/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <div class="container">
-    <h1 class="page-header">Cropper with a range of aspect ratio</h1>
+    <h1 class="page-header">完虐龙哥</h1>
     <div>
       <img id="image" src="img/picture.jpg" alt="Picture">
     </div>
